--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,9 @@
 <meta charset="UTF-8">
-<title>Trademarkers</title>
+<% if ( typeof title != "undefined" ) { %>
+    <title><%= title ? title : 'Trademarkers LLC' %></title>
+<% } else { %>
+    <title>Trademarkers LLC</title>
+<% } %>
 
 <!-- Fonts -->
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
@@ -20,3 +24,13 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-N75TKVW');</script>
+
+
+
+<% if ( typeof description != "undefined" ) { %>
+    <meta name="description" content="<%= description ? description : 'Trademarkers LLC' %>">
+<% } %>
+
+<% if ( typeof description != "undefined" ) { %>
+    <meta name="keywords" content="<%= keywords ? keywords : 'Trademarkers LLC' %>">
+<% } %>
