--- a/views/admin/user/edit.ejs
+++ b/views/admin/user/edit.ejs
@@ -27,6 +27,7 @@
                 <select class="form-control" name="role">
                     <option value="Customer" <%= user.role == "Customer" ? "selected" : "" %>>Customer</option>
                     <option value="Researcher" <%= user.role == "Researcher" ? "selected" : "" %>>Researcher</option>
+                    <option value="Attorney" <%= user.role == "Attorney" ? "selected" : "" %>>Attorney</option>
                     <option value="Admin" <%= user.role == "Admin" ? "selected" : "" %>>Admin</option>
                 </select>
             </div>
