--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -4,6 +4,7 @@
     </div>
     <div class="card-body">
         <ul class="list-group list-group-flush">
+            <li class="list-group-item"><a href="/njs-admin/manage/user">Manage Users</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/trademark">Manage Trademarks</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/country">Manage Countries</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/tasks">Manage Task</a></li>
