--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -6,7 +6,7 @@
     <body >
 
         <div id="researcher-app">
-            <%- include('../partials/researcher_header'); %>
+            <%- include('../partials/admin_header'); %>
             
             <div style="padding:0 15px">
                 <div class="row justify-content-center ">
