--- a/email-templates/trademarkCertificateNotification.ejs
+++ b/email-templates/trademarkCertificateNotification.ejs
@@ -331,10 +331,23 @@
                         <tr style="border-collapse:collapse;"> 
                          <td align="left" style="padding:0;Margin:0;padding-top:10px;" mc:edit="block_5">
                           <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
-                            <% 
-                            let name = trademark.user.name.split(',')
-                            %>
-                            Dear <%= name[1] ? name[1].trim() : 'Trademarkers Client' %>,
+                           
+                            <%
+                            let name="";
+
+                            if (trademark.user.nameAddress && trademark.user.suffix) {
+                              if (trademark.user.nameAddress == 'firstName') {
+                                name = trademark.user.suffix + " " + trademark.user.firstName
+                              } else if(trademark.user.nameAddress == 'lastName') {
+                                name = trademark.user.suffix + ". " + trademark.user.lastName
+                              } else {
+                                name = trademark.user.name
+                              }
+                            } else {
+                              name = trademark.user.name
+                            }
+                          %>
+                            Dear <%= name %>,
 
                           </p></td> 
                         
@@ -345,7 +358,7 @@
                          
                           
 
-                          <p>Your Trademark(<%= trademark.mark %>) certificate is now available, Please let us know how you want us to deliver your Trademark Certificate</p>
+                          <p>Your Trademark (<%= trademark.mark %>) certificate is now available, Please let us know how you want us to deliver your Trademark Certificate</p>
 
                           <p>Available Delivery Options: Regular Mail (Free Shipping) or FedEx (Shipping Fee: $80) </p>
                           
