--- a/views/admin/user/index.ejs
+++ b/views/admin/user/index.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-12" style="margin-bottom:20px;">  
-    <h2>Users List </h2>
+    <h2>Users List <a class="ml-3 btn btn-primary" href="/njs-admin/manage/user/add"><i class="fa fa-plus" style="color:#fff"></i></a></h2>
 
     <% if (flash.success) { %>
     <div class="alert alert-success" role="alert">
